2008-12-26  Brian G. Merrell <bgmerrell@gmail.com>

        * configure.ac: The comment for the Hiveminder section was mislabeled
        as SQLite, which propagates into the comments of the 'configure' file.
        No biggie.

2008-12-24  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* configure.ac:
	* src/Defines.WIN32.cs:
	* osx/Contents/Info.plist: Bump version to 0.1.9.

2008-12-24  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* NEWS: Updated for 0.1.8.

2008-12-24  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Application.cs: DllImport system function from libc to open
	URLs, since the Process class is broken in OS X 10.4 and earlier
	(should be fixed when Mono 2.2 comes out).

2008-12-24  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Application.cs: In RetryBackend, only Cleanup+Initialize if the
	backend isn't configured. Fixes problem with backends beining
	initialized twice (reproduce by clearing prefs, launching Tasque,
	choosing Local File backend, and noticing that no category is
	selected).

2008-12-24  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* RtmNet/Rtm.cs: Make lastRequestTime static, so that new Rtm instances
	obey it. Fixes problem where after authenticating RTM for the first
	time, task list came back truncated like in bug #562026.

2008-12-24  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Makefile.am: Add OSXApplication.cs to EXTRA_DIST and POTFILES.in.

2008-12-23  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* mac-prebuild.sh:
	* mac-postbuild.sh:
	* tasque-mac.csproj: Update project to actually work on a Mac.

	* bundle-mac-app.sh: Copy RtmNet.dll and all .mdb files into bundle.
	* osx/Contents/MacOS/Tasque: Run with --debug.

	* src/TaskWindow.cs: ShowWindow only shows; use new ToggleWindowVisible
	method for toggle support.
	* src/Application.cs: Use ToggleWindowVisible when tray icon is activated.
	Fix #if directives to have proper Mac support.